Remove dangling fragment.

--- a/doc/README
+++ b/doc/README
@@ -18,7 +18,7 @@ On Windows, run FileBunker by double-clicking FileBunker.exe, which is
 sitting next to this README file.
 
 On Linux, run FileBunker by running the FileBunker shell script which is
-sitting next to this README file. e.g.:
+sitting next to this README file.
 
 For more information, consult the documentation in Resources/doc, or visit
 http://filebunker.sourceforge.net.
